added module managing and building via requirejs, initial layout and css, favicon, added socket.io with example methods, adjusted directories

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "deckOfCards",
     "version": "0.0.1",
     "dependencies": {
-        "express": "2.5.6"
+        "express": "2.5.6",
+        "socket.io": "0.8.7",
+        "jade": "0.20.0",
+        "requirejs": "1.0.4;
     }
 }
