--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
         "express": "2.5.6",
         "socket.io": "0.8.7",
         "jade": "0.20.0",
-        "requirejs": "1.0.4";
+        "requirejs": "1.0.4"
     }
 }
